# SuperPrepare

./: .gitignore  README.md  pyproject.toml  recently_presented_datasets.xlsx  setup.py
datasets/: EEG_Dataset_List (SFConflict 602024220128@nju.edu.cn 2024-12-20-17-22-32).xlsx  EEG_Dataset_List.xlsx
docs/: api-reference.md  configuration.md  datasets.md  getting-started.md  index.md  output-format.md  pipeline.md
matlab-preprocessing-code/: DataforCS_merge.m  config.m  config.mlx  run_wav2vec2.py  split_datasets.m  split_datasets1.m
matlab-preprocessing-code/utils/: SubjectwiseScaler.m  append_additional_info.m  calculateEnvelopeERBGammatone.m  channel_layout_summary.m  detect_silent_tailing.m  extract_trials.m  extract_wav2vec.m  get_dataset_info.m  get_num_trials.m  load_data_struct.m  load_stimuli.m  mel.py  save_pickle.m  split_camel_case.m  to_column_vector.m
pre-processing-code/ASA/: NUS_rescale.m  preprocess.py
pre-processing-code/Estart/: Estart_chanlocs.ced  Estart_pipeline.m  h5_to_mat.m  preprocess_data_english_session.py
pre-processing-code/KUL/: kul_preprocess.m
pre-processing-code/NJU/: apply_mwf.m  artifact_removal_mwf.m  compute_mwf.m  example.m  get_artifact_segments.m  interpolate_artifacts.m  prepoc_ica.m  stack_delayed.m
prepare_dataset/: Complete_EEG_Datasets_List.xlsx  recently_presented_datasets.xlsx  split_datasets.m  tmp.npy
prepare_dataset/utils/: calculateEnvelopeERBGammatone.m  mel.py
scripts/dnn/: main.py  (+3 more)
superhuge/: __init__.py
superhuge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
train/: main.py
(+85 files in other folders)
